# cpp-linter

./: .gitignore  Cargo.toml  linter.toml  pointers-naming.py
src/: anonymous_namespace.rs  check.rs  lib.rs  main.rs  namespace.rs  pointer.rs
src/checks/: auto.rs  mod.rs  namespace.rs  pointer.rs  standard_lib.rs
tests/: auto.cpp  namespace.cpp  pointer_prefix.cpp
