[package]
name = "linter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
